fix buttons overlapping answer

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -160,6 +160,8 @@ body {
 
 .answer {
   font-size: 1.5em;
+  margin-right: 50px;
+  margin-left: 50px;
 }
 
 .source_url {
